--- a/ParcialFinalAvanzada/src/main/resources/application.properties
+++ b/ParcialFinalAvanzada/src/main/resources/application.properties
@@ -1,23 +1,28 @@
 spring.application.name=parcial3pa
 
-server.port=8091
 
 
 
-spring.datasource.url=jdbc:mysql://localhost:3306/sakila
-spring.datasource.username=root
-spring.datasource.password=
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+server.port:8083
+spring.datasource.url = jdbc:mysql://${DB_HOST}:${DB_PORT}/${DB_NAME}
 
-# Configuraci\u00f3n de logs para Hibernate
+spring.datasource.username={DB_USER}
+spring.datasource.password={DB´PASSWORD}
+# Show or not log for each sql query
+spring.jpa.show-sql=true
+# Hibernate ddl auto (create, create-drop, update): with "create-drop" the database
+# schema will be automatically created afresh for every start of application
+spring.jpa.hibernate.ddl-auto=update
+# Allows Hibernate to generate SQL optimized for a particular DBMS
+spring.user.datasource.driver-class-name=com.mysql.jdbc.driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.properties.hibernate.format_sql=true
+ 
+# Configuración de logs para Hibernate
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} %-5level %logger{36} - %msg%n
 logging.level.org.hibernate.SQL=debug
 
 
-# Opcional: configuraci\u00f3n JPA
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 #mail
 spring.mail.host=smtp.gmail.com
