--- a/ParcialFinalAvanzada/src/main/resources/application.properties
+++ b/ParcialFinalAvanzada/src/main/resources/application.properties
@@ -3,11 +3,10 @@ spring.application.name=parcial3pa
 
 
 
-server.port:8083
-spring.datasource.url = jdbc:mysql://${DB_HOST}:${DB_PORT}/${DB_NAME}
-
-spring.datasource.username={DB_USER}
-spring.datasource.password={DB´PASSWORD}
+server.port=${PORT:8080}
+spring.datasource.url=jdbc:mysql://${DB_HOST}:${DB_PORT}/${DB_NAME}
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASSWORD}
 # Show or not log for each sql query
 spring.jpa.show-sql=true
 # Hibernate ddl auto (create, create-drop, update): with "create-drop" the database
